<resources>
    <string name="app_name">KotlinBasics</string>
    <string name="welcome_to_simform">Welcome to Simform</string>
    <string name="register">Register</string>
    <string name="simform_logo">Simform_logo</string>
    <string name="enter_details">Enter details</string>
    <string name="username">Username</string>
    <string name="full_name">Enter full name</string>
    <string name="gender">Gender :</string>
    <string name="male"> Male</string>
    <string name="female"> Female</string>
    <string name="select_appropriate_skills">Select appropriate skills</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
    <string name="android">Android</string>
    <string name="ios">IOS</string>
    <string name="flutter">Flutter</string>
    <string name="javascript">JavaScript</string>
    <string name="internship">Have you gone through any internship?</string>
    <string name="selected">%1$s selected</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="describe">Describe yourself :</string>
    <string name="describe_text">Describe yourself</string>
    <string name="submit_with_high_priority">Submit with high priority?</string>
    <string name="submit">Submit</string>
    <string name="ripple_without_border">Ripple Without Border</string>
    <string name="ripple_with_border">Ripple with border</string>
    <string name="custom_ripple_with_border">Custom ripple with border</string>
    <string name="custom_ripple_without_border">Custom ripple without border</string>
    <string name="submit_toast_text">Form submitted</string>
    <string name="minimum_skills">You should have atleast 2 skills</string>
    <string name="describe_limit">Description should have more than 10 characters</string>
    <string name="dialogTitle">Attention!</string>
    <string name="dialogMessage">You are submitting with normal priority. \nWould you like to change to High priority?</string>
    <string name="skills_array">SkillsArray</string>
    <string name="next_line">\n</string>
    <string name="details_title">Submitted Details</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="button">Button</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="enter_proper_email">Enter proper email!</string>
    <string name="phone_validation">Phone number not valid</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="password_label">Password:</string>
    <string name="gender_label">Gender:</string>
    <string name="skills">Skills:</string>
    <string name="intern_status">Intern Status:</string>
    <string name="description">Description:</string>
    <string name="enter_phone_no">Enter Phone no.</string>
    <string name="phone">Phone:</string>
    <string name="comma_space">,\u0020</string>
    <string name="employee_intern_status_yes">Employee is Interned</string>
    <string name="employee_intern_status_no">Employee is not Interned</string>
    <string name="reg_form">Registration Form</string>
    <string name="empty_text"> </string>
    <string name="ui_widgets">UI widgets</string>
    <string name="vraj_android_practicals">Vraj Android Practicals</string>
    <string name="submit_priority">Submit Priority: </string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="provide_detailed_feedback_here">Provide detailed feedback here</string>
    <string name="would_you_like_an_email_response">Would you like an email response?</string>
    <string name="selected_item">%1$s selected  😊</string>
    <string name="drop_down_logo">drop_down_logo</string>
    <string name="overall">Overall:</string>
    <string name="feedback_title">UI Widgets Practical</string>
    <string name="username_validation">Enter valid name</string>
    <string name="email_validation">Enter proper email address</string>
    <string name="spinner_validation">Select proper feedback type</string>
    <string name="detailed_feedback_validation">Enter detailed feedback</string>
    <string name="detailed_feedback_limit_validation">Detailed feedback must have atleast 10 characters</string>
    <string name="ui_layouts">UI Layouts</string>
    <string name="layouts_activity_title">Different Layouts</string>
    <string name="constraint_layout">Constraint layout</string>
    <string name="table_layout">Table layout</string>
    <string name="frame_layout">Frame layout</string>
    <string name="overall_feedback_type">Overall feedback type:</string>
    <string name="detailed_feedback_label">Detailed feedback:</string>
    <string name="get_email_response">Get email response:</string>
    <string name="data_activity_title">Submitted feedback details</string>
    <string name="ripple_title">Buttons with ripple effect</string>
    <string-array name="feedback_type">
        <item>Select Feedback Type</item>
        <item>Okay</item>
        <item>Average</item>
        <item>Good</item>
        <item>Better</item>
        <item>Best</item>
    </string-array>
    <string name="listview">ListView</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="gridlayout_in_recyclerview">Gridlayout in recyclerview</string>
    <string name="contacts">Contacts</string>
    <string name="contact_person_image">Contact person image</string>
    <string name="add_contact">ADD CONTACT</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_number">Contact number</string>
    <string name="add">ADD</string>
    <string name="name_validation">Enter proper name</string>
    <string name="number_validation">Enter proper number</string>
    <string name="name_exists">Name already exists</string>
    <string name="number_exists">Number already exists</string>
    <string name="remove_permission_string">Do you want to remove selected contact?</string>
    <string name="diff_views">Different views</string>
    <string name="select_your_order">Select your order</string>
    <string name="submit_order">Submit order</string>
    <string name="food_item_logo">food_item_logo</string>
    <string name="selected_logo">selected logo</string>
    <string name="select_food">Please select atleast one food item</string>
    <string name="viewpager">ViewPager</string>
    <string-array name="contact_names">
        <item>Person 1</item>
        <item>Person 2</item>
        <item>Person 3</item>
        <item>Person 4</item>
        <item>Person 5</item>
        <item>Person 6</item>
        <item>Person 7</item>
        <item>Person 8</item>
        <item>Person 9</item>
        <item>Person 10</item>
    </string-array>
    <string-array name="contact_numbers">
        <item>1234567890</item>
        <item>2345678901</item>
        <item>3456789012</item>
        <item>4567890123</item>
        <item>5678901234</item>
        <item>6789012345</item>
        <item>7890123456</item>
        <item>8901234567</item>
        <item>9012345678</item>
        <item>0123456789</item>
    </string-array>
    <string name="recent_fragment_title">Recent</string>
    <string name="fav_fragment_title">Favourite</string>
    <string name="key_id">key%1$d</string>
    <string name="total_items_in_recent">total items in recent</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="fav_selected">%1$s added to favourites</string>
    <string name="remove_food_permission">Do you want to remove selected food item from favourites?</string>
    <string name="clear_recent_list">Clear recent list</string>
    <string name="clear_fav_list">Clear favourite list</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_profile">My Profile</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="movie_image">Movie Image</string>
    <string name="name_and_first_appearance">%1$s (%2$d)</string>
    <string name="team">Team: %1$s</string>
    <string name="created_by">Created by: %1$s</string>
    <string name="publisher">Publisher: %1$s</string>
    <string name="details_movie">Details: %1$s</string>
    <string name="no_items_found">No items found</string>
    <string name="null_text">NULL</string>
    <string name="recyclerview_and_adapter">Recyclerview and adapter</string>
    <string name="bread">Bread</string>
    <string name="cheese_cake">Cheesecake</string>
    <string name="chocolate_bar">Chocolate Bar</string>
    <string name="doughnut">Doughnut</string>
    <string name="egg">Egg</string>
    <string name="french_fries">French fries</string>
    <string name="hamburger">Hamburger</string>
    <string name="hot_dog">Hot dog</string>
    <string name="ice_cream_cone">Ice cream cone</string>
    <string name="ice_cream_sundae">Ice cream sundae</string>
    <string name="noodles">Noodles</string>
    <string name="pizza">Pizza</string>
    <string name="popcorn">Popcorn</string>
    <string name="strawberry">Strawberry</string>
    <string name="taco">Taco</string>
    <string name="intent_and_fragments">Intent and Fragments</string>
    <string name="gallery">Gallery</string>
    <string name="first_user">First User</string>
    <string name="second_user">Second User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_image">Add Image</string>
    <string name="camera">Camera</string>
    <string name="intent_data_keyword">data</string>
    <string name="image_name">IMG_CAM</string>
    <string name="send">SEND</string>
    <string name="enter_message">Enter message</string>
    <string name="prefix_first">"First user: "</string>
    <string name="prefix_second">"Second user: "</string>
    <string name="jetpack_navigation_component">JetPack Navigation component</string>
    <string name="scrollview_and_webview">ScrollView and WebView</string>
    <string name="scrollview">ScrollView</string>
    <string name="webview">WebView</string>
    <string name="searchview">SearchView</string>
    <string name="vertical_recyclerview">Vertical Recyclerview</string>
    <string name="horizontal_recyclerview">Horizontal RecyclerView</string>
    <string name="web_services">Web Services</string>
    <string name="android_architecture">Android Architecture</string>
</resources>