<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/diff_views_background"
    tools:context=".recyclerview_and_adapters.activity.DifferentViewsHomeScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnListView"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/colored_round_button"
            android:text="@string/listview" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRecyclerView"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/colored_round_button"
            android:text="@string/recyclerview" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGridLayout"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/colored_round_button"
            android:text="@string/gridlayout_in_recyclerview" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnViewPager"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/colored_round_button"
            android:text="@string/viewpager" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBottomNavigation"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/colored_round_button"
            android:text="@string/bottom_navigation" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>