<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_layout.FrameLayoutActivity"
    android:background="@drawable/feedback_form_background">

    <TextView
        android:id="@+id/tvFeedbackTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/feedback_form"
        android:textColor="@color/black"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_5sdp"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_field_background"
        android:hint="@string/your_name"
        android:inputType="text"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_13ssp"
        android:importantForAutofill="no"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_60sdp"/>

    <EditText
        android:id="@+id/etUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_field_background"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_13ssp"
        android:importantForAutofill="no"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_103sdp"/>

    <TextView
        android:id="@+id/tvOverallFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overall"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_150sdp"/>

    <Spinner
        android:id="@+id/spnFeedbackType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_147sdp"
        android:background="@drawable/text_field_background"
        android:layout_marginEnd="@dimen/_10sdp"/>

    <ImageView
        android:id="@+id/ivDropDown"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_153sdp"
        android:layout_marginStart="@dimen/_270sdp"
        android:contentDescription="@string/drop_down_logo"
        android:src="@drawable/ic_drop_down_arrow" />

    <EditText
        android:id="@+id/etDetailedFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_182sdp"
        android:background="@drawable/text_field_background"
        android:gravity="top"
        android:hint="@string/provide_detailed_feedback_here"
        android:inputType="textMultiLine"
        android:lines="6"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_13ssp"
        android:importantForAutofill="no"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbEmailPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_292sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:button="@drawable/custom_checkbox"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/tvCheckBoxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_299sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:text="@string/would_you_like_an_email_response"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmitFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_357sdp"
        android:text="@string/submit"
        android:background="@drawable/stroke_button"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>

</FrameLayout>