<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_background">

    <TextView
        android:id="@+id/tvAddContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/add_contact"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/etNewContactName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNewContactName"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/text_field_background"
        android:hint="@string/contact_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddContact" />

    <EditText
        android:id="@+id/etNewContactNumber"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/text_field_background"
        android:hint="@string/contact_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNewContactName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddContact"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/stroke_button"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/etNewContactNumber"
        app:layout_constraintTop_toBottomOf="@id/etNewContactNumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/stroke_button"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/btnAddContact"
        app:layout_constraintRight_toLeftOf="@+id/btnAddContact" />

</androidx.constraintlayout.widget.ConstraintLayout>